# shape

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  runnit.sh  shape.cpp  shape.hpp
